@@ -42,6 +42,43 @@ GTK_PREFIX=`$PKG_CONFIG --variable=prefix gtk+-2.0`
 AC_SUBST(GTK_BINARY_VERSION)
 AC_SUBST(GTK_PREFIX)
 
+dnl default keyboard
+AC_ARG_WITH(default-keyboard, [  --with-default-keyboard=2/39/3f   default hangul keyboard])
+case "$with_default_keyboard" in
+    2)
+        AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD_2, "ko",
+                           [Define default hangul keyboard])
+        AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD_39, "",
+                           [Define default hangul keyboard])
+        AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD_3F, "",
+                           [Define default hangul keyboard])
+        ;;
+    39)
+        AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD_2, "",
+                           [Define default hangul keyboard])
+        AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD_39, "ko",
+                           [Define default hangul keyboard])
+        AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD_3F, "",
+                           [Define default hangul keyboard])
+        ;;
+    3f)
+        AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD_2, "",
+                           [Define default hangul keyboard])
+        AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD_39, "",
+                           [Define default hangul keyboard])
+        AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD_3F, "ko",
+                           [Define default hangul keyboard])
+        ;;
+    *)
+        AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD_2, "ko",
+                           [Define default hangul keyboard])
+        AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD_39, "",
+                           [Define default hangul keyboard])
+        AC_DEFINE_UNQUOTED(DEFAULT_KEYBOARD_3F, "",
+                           [Define default hangul keyboard])
+        ;;
+esac
+
 AC_OUTPUT([
 Makefile
 po/Makefile.in
